patient were hardcoded